# ML-Model-Lab

./: README.md  pyproject.toml
src/ml_model_lab/: __init__.py
src/ml_model_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ml_model_lab/app/: __main__.py  main_window.py
src/ml_model_lab/core/: app_state.py  events.py
src/ml_model_lab/data/: __init__.py  dataset_generators.py
src/ml_model_lab/models/: base_model.py  model_registry.py
src/ml_model_lab/models/keras/: __init__.py  keras_mlp.py
src/ml_model_lab/models/sklearn/: __init__.py  sklearn_base.py
src/ml_model_lab/training/: trainer.py
src/ml_model_lab/viz/: dataset_view.py  loss_plot_view.py  network_view.py
tests/: test_datasets.py
