[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-model-lab"
version = "0.2.0"
description = "ML Model Lab playground with PySide6 and matplotlib"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.7",
  "scikit-learn>=1.2",
  "PySide6>=6.5",
]

[project.optional-dependencies]
keras = ["tensorflow>=2.12"]
dev = ["pytest>=7.0"]

[project.scripts]
ml-model-lab = "ml_model_lab.app.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
